# katas

./: .coverage  .gitignore  .gitlab-ci.yml  README.md  pom.xml  pyproject.toml  string_calculator.cabal
.circleci/: config.yml
.github/workflows/: java.yml
calculator/: string_calculator.py
src/: StringCalculator.hs
src/main/java/org/codingdojo/yatzy/one/: YatzyOne.java
src/main/java/org/codingdojo/yatzy/two/: YatzyTwo.java
src/test/java/org/codingdojo/: YatzyOnePlusTest.java
src/test/java/org/codingdojo/yatzy/one/: YatzyOneTest.java
src/test/java/org/codingdojo/yatzy/two/: YatzyTwoTest.java
tests/: StringCalculatorTest.hs  test_string_calculator.py
